--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
 <body>
     <div id="welcome-screen">
         <h1>Дурень Онлайн</h1>
+        <div class="auth-buttons">
+            <button id="showLoginBtn" class="secondary-btn">Вхід</button>
+            <button id="showRegisterBtn" class="secondary-btn">Реєстрація</button>
+        </div>
+        <p class="separator"><span>АБО</span></p>
         <div class="settings-form">
             <div class="form-group"><label for="playerNameInput">Ваше ім'я:</label><input type="text"
                     id="playerNameInput" placeholder="Гравець 1" value="Гравець 1"></div>
@@ -97,6 +102,25 @@
         <button id="rematchBtn">Реванш</button>
         <p id="rematch-status"></p>
         <a href="/"><button class="secondary-btn">Вийти в головне меню</button></a>
+    </div>
+
+    <div id="auth-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <span class="close-modal-btn">×</span>
+            <h2 id="modal-title">Вхід</h2>
+            <form id="auth-form">
+                <div class="form-group">
+                    <label for="authUsername">Ім'я користувача:</label>
+                    <input type="text" id="authUsername" required>
+                </div>
+                <div class="form-group">
+                    <label for="authPassword">Пароль:</label>
+                    <input type="password" id="authPassword" required>
+                </div>
+                <p id="auth-error" class="error"></p>
+                <button type="submit" id="authSubmitBtn">Увійти</button>
+            </form>
+        </div>
     </div>
 
     <div id="center-animation-container"></div>
