feat(auth): add user profile section and session management
- Implement user profile display with stats in the UI
- Add logout functionality and session checking
- Update auth routes to handle session updates
- Improve game state management for logged-in users

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,69 @@
 <!DOCTYPE html>
 <html lang="uk">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гра Дурень Онлайн</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
     <div id="welcome-screen">
         <h1>Дурень Онлайн</h1>
-        <div class="auth-buttons">
-            <button id="showLoginBtn" class="secondary-btn">Вхід</button>
-            <button id="showRegisterBtn" class="secondary-btn">Реєстрація</button>
+
+        <div id="user-profile" style="display: none;">
+            <p>Ви увійшли як <strong id="profile-username"></strong></p>
+            <div class="stats">
+                <span>🏆 Перемог: <b id="profile-wins">0</b></span>
+                <span>💔 Поразок: <b id="profile-losses">0</b></span>
+            </div>
+            <button id="logoutBtn" class="secondary-btn">Вийти</button>
         </div>
-        <p class="separator"><span>АБО</span></p>
-        <div class="settings-form">
-            <div class="form-group"><label for="playerNameInput">Ваше ім'я:</label><input type="text"
-                    id="playerNameInput" placeholder="Гравець 1" value="Гравець 1"></div>
-            <div class="form-group"><label for="deckSize">Розмір колоди:</label><select id="deckSize">
-                    <option value="36" selected>36 карт</option>
-                    <option value="52">52 карти</option>
-                    <option value="24">24 карти</option>
-                </select></div>
-            <div class="form-group"><label for="maxPlayers">Кількість гравців:</label><select id="maxPlayers">
-                    <option value="2" selected>2 гравці</option>
-                    <option value="3">3 гравці</option>
-                    <option value="4">4 гравці</option>
-                </select></div>
-            <div class="form-group"><label for="customGameId">Своє посилання (необов'язково):</label><input type="text"
-                    id="customGameId" placeholder="MY-COOL-GAME"></div>
-            <button id="createGameBtn">Створити гру</button>
+
+        <div id="guest-login">
+            <div class="auth-buttons">
+                <button id="showLoginBtn" class="secondary-btn">Вхід</button>
+                <button id="showRegisterBtn" class="secondary-btn">Реєстрація</button>
+            </div>
+            <p class="separator"><span>АБО</span></p>
+            <div class="settings-form">
+                <div class="form-group">
+                    <label for="playerNameInput">Ваше ім'я (як гостя):</label>
+                    <input type="text" id="playerNameInput" placeholder="Гравець 1">
+                </div>
+            </div>
         </div>
-        <div id="join-game-section" style="display: none;">
-            <p>Приєднайтесь до гри друга:</p><button id="joinGameBtn">Приєднатись</button>
+
+        <div id="game-creation-controls">
+            <div class="settings-form">
+                <div class="form-group">
+                    <label for="deckSize">Розмір колоди:</label>
+                    <select id="deckSize">
+                        <option value="36" selected>36 карт</option>
+                        <option value="52">52 карти</option>
+                        <option value="24">24 карти</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="maxPlayers">Кількість гравців:</label>
+                    <select id="maxPlayers">
+                        <option value="2" selected>2 гравці</option>
+                        <option value="3">3 гравці</option>
+                        <option value="4">4 гравці</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="customGameId">Своє посилання (необов'язково):</label>
+                    <input type="text" id="customGameId" placeholder="MY-COOL-GAME">
+                </div>
+                <button id="createGameBtn">Створити гру</button>
+            </div>
+            <div id="join-game-section" style="display: none;">
+                <p>Приєднайтесь до гри друга:</p>
+                <button id="joinGameBtn">Приєднатись</button>
+            </div>
         </div>
+        
         <p id="error-message" class="error" style="display: none;"></p>
     </div>
 
@@ -47,11 +73,7 @@
         <div class="invite-link-wrapper">
             <input type="text" id="lobbyInviteLink" readonly>
             <div id="copyLobbyLinkBtn" class="copy-icon-btn" title="Копіювати посилання">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
-                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
             </div>
         </div>
         <hr>
@@ -68,25 +90,19 @@
             <div class="invite-link-wrapper">
                 <input type="text" id="inviteLink" readonly>
                 <div id="copyLinkBtn" class="copy-icon-btn" title="Копіювати посилання">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
-                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
                 </div>
             </div>
         </div>
         <div id="opponents-container"></div>
         <div id="deck-area">
             <div id="deck-pile-visual">
-                <div class="card card-back"></div>
+                <div class="card card-back"></div> 
                 <span id="deck-count-display">?</span>
             </div>
         </div>
         <div id="table-area">
-            <div id="game-info-bar">
-                <span id="trump-card-display">Козир: ?</span>
-            </div>
+            <div id="game-info-bar"><span id="trump-card-display">Козир: ?</span></div>
             <p id="turn-status" class="turn-status"></p>
             <div id="game-table" class="card-hand"></div>
             <div id="action-buttons"></div>
@@ -103,6 +119,9 @@
         <p id="rematch-status"></p>
         <a href="/"><button class="secondary-btn">Вийти в головне меню</button></a>
     </div>
+
+    <div id="center-animation-container"></div>
+    <div id="error-toast"></div>
 
     <div id="auth-modal" class="modal-overlay" style="display: none;">
         <div class="modal-content">
@@ -123,11 +142,7 @@
         </div>
     </div>
 
-    <div id="center-animation-container"></div>
-    <div id="error-toast"></div>
-
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/client.js"></script>
 </body>
-
 </html>
