feat(game-log): add game log feature with mobile support
- Implement game log container in HTML with responsive design
- Add CSS styling for desktop and mobile views
- Integrate log functionality in client.js with socket events
- Enhance server-side logging with timestamp and player actions

--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,15 @@
             </div>
         </div>
         <div id="opponents-container"></div>
+        <div id="game-log-container">
+            <div class="log-header">
+                <h4>Журнал гри</h4>
+                <span id="close-log-btn" class="close-log-btn">×</span>
+            </div>
+            <ul id="game-log-list">
+            </ul>
+        </div>
+        <button id="show-log-btn-mobile" class="floating-btn">📜</button>
         <div id="deck-area">
             <div id="deck-pile-visual">
                 <div class="card card-back"></div> 
