feat(chat): add in-game chat functionality to game log
- Implement chat form in game log container with message input and submit button
- Add server-side message handling with validation and formatting
- Style chat messages differently from game log entries
- Support mobile view with responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -97,11 +97,15 @@
         <div id="opponents-container"></div>
         <div id="game-log-container">
             <div class="log-header">
-                <h4>Журнал гри</h4>
+                <h4>Журнал / Чат</h4>
                 <span id="close-log-btn" class="close-log-btn">×</span>
             </div>
             <ul id="game-log-list">
             </ul>
+            <form id="chat-form">
+                <input type="text" id="chat-input" placeholder="Написати в чат..." autocomplete="off">
+                <button type="submit">➤</button>
+            </form>
         </div>
         <button id="show-log-btn-mobile" class="floating-btn">📜</button>
         <div id="deck-area">
