feat: add win streak tracking and visual indicators
- Implement streak tracking for consecutive wins with daily validation
- Add fire emoji indicators for player streaks in UI
- Include streak data in game state and session management
- Improve card draw animations and game log styling

--- a/public/index.html
+++ b/public/index.html
@@ -100,8 +100,7 @@
                 <h4>Журнал / Чат</h4>
                 <span id="close-log-btn" class="close-log-btn">×</span>
             </div>
-            <ul id="game-log-list">
-            </ul>
+            <ul id="game-log-list"></ul>
             <form id="chat-form">
                 <input type="text" id="chat-input" placeholder="Написати в чат..." autocomplete="off">
                 <button type="submit">➤</button>
