feat(settings): add card back style customization feature
- Add settings page for card back style selection
- Implement database changes to store user preferences
- Update game UI to display custom card backs
- Add API endpoints for settings management
- Modify game logic to handle card style preferences

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
                 <span>🏆 Перемог: <b id="profile-wins">0</b></span>
                 <span>💔 Поразок: <b id="profile-losses">0</b></span>
             </div>
+            <a href="/settings"><button class="secondary-btn">Налаштування</button></a>
             <button id="logoutBtn" class="secondary-btn">Вийти</button>
         </div>
 
