--- a/public/index.html
+++ b/public/index.html
@@ -3,134 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Гра Дурень Онлайн</title>
+    <title data-i18n="document_title">Гра Дурень Онлайн</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Скрипти для перекладу -->
+    <script src="https://unpkg.com/i18next/i18next.js"></script>
+    <script src="https://unpkg.com/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.js"></script>
 </head>
 <body>
+    <div class="lang-switcher">
+        <button class="lang-btn" data-lang="uk">🇺🇦</button>
+        <button class="lang-btn" data-lang="en">🇬🇧</button>
+    </div>
+
     <div id="welcome-screen">
-        <h1>Дурень Онлайн</h1>
-
+        <h1 data-i18n="welcome_title">Дурень Онлайн</h1>
         <div id="user-profile" style="display: none;">
-            <p>Ви увійшли як <strong id="profile-username"></strong></p>
+            <p><span data-i18n="profile_greeting">Ви увійшли як</span> <strong id="profile-username"></strong></p>
             <div class="stats">
-                <span>🏆 Перемог: <b id="profile-wins">0</b></span>
-                <span>💔 Поразок: <b id="profile-losses">0</b></span>
+                <span><span data-i18n="profile_wins">🏆 Перемог:</span> <b id="profile-wins">0</b></span>
+                <span><span data-i18n="profile_losses">💔 Поразок:</span> <b id="profile-losses">0</b></span>
             </div>
-            <a href="/settings"><button class="secondary-btn">Налаштування</button></a>
-            <button id="logoutBtn" class="secondary-btn">Вийти</button>
+            <a href="/settings"><button class="secondary-btn" data-i18n="settings_button">Налаштування</button></a>
+            <button id="logoutBtn" class="secondary-btn" data-i18n="logout_button">Вийти</button>
         </div>
-
         <div id="guest-login">
             <div class="auth-buttons">
-                <button id="showLoginBtn" class="secondary-btn">Вхід</button>
-                <button id="showRegisterBtn" class="secondary-btn">Реєстрація</button>
+                <button id="showLoginBtn" class="secondary-btn" data-i18n="login_button">Вхід</button>
+                <button id="showRegisterBtn" class="secondary-btn" data-i18n="register_button">Реєстрація</button>
             </div>
-            <p class="separator"><span>АБО</span></p>
+            <p class="separator"><span data-i18n="or_separator">АБО</span></p>
             <div class="settings-form">
                 <div class="form-group">
-                    <label for="playerNameInput">Ваше ім'я (як гостя):</label>
+                    <label for="playerNameInput" data-i18n="guest_name_label">Ваше ім'я (як гостя):</label>
                     <input type="text" id="playerNameInput" placeholder="Гравець 1">
                 </div>
             </div>
         </div>
-
         <div id="game-creation-controls">
             <div class="settings-form">
-                <div class="form-group">
-                    <label for="deckSize">Розмір колоди:</label>
-                    <select id="deckSize">
-                        <option value="36" selected>36 карт</option>
-                        <option value="52">52 карти</option>
-                        <option value="24">24 карти</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="maxPlayers">Кількість гравців:</label>
-                    <select id="maxPlayers">
-                        <option value="2" selected>2 гравці</option>
-                        <option value="3">3 гравці</option>
-                        <option value="4">4 гравці</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="customGameId">Своє посилання (необов'язково):</label>
-                    <input type="text" id="customGameId" placeholder="MY-COOL-GAME">
-                </div>
-                <button id="createGameBtn">Створити гру</button>
+                <div class="form-group"><label for="deckSize" data-i18n="deck_size_label">Розмір колоди:</label><select id="deckSize"><option value="36" data-i18n="deck_36">36 карт</option><option value="52" data-i18n="deck_52">52 карти</option><option value="24" data-i18n="deck_24">24 карти</option></select></div>
+                <div class="form-group"><label for="maxPlayers" data-i18n="players_count_label">Кількість гравців:</label><select id="maxPlayers"><option value="2" data-i18n="players_2">2 гравці</option><option value="3" data-i18n="players_3">3 гравці</option><option value="4" data-i18n="players_4">4 гравці</option></select></div>
+                <div class="form-group"><label for="customGameId" data-i18n="custom_link_label">Своє посилання (необов'язково):</label><input type="text" id="customGameId" placeholder="MY-COOL-GAME"></div>
+                <button id="createGameBtn" data-i18n="create_game_button">Створити гру</button>
             </div>
-            <div id="join-game-section" style="display: none;">
-                <p>Приєднайтесь до гри друга:</p>
-                <button id="joinGameBtn">Приєднатись</button>
-            </div>
+            <div id="join-game-section" style="display: none;"><p data-i18n="join_game_prompt">Приєднайтесь до гри друга:</p><button id="joinGameBtn" data-i18n="join_button">Приєднатись</button></div>
         </div>
-        
-        <p id="error-message" class="error" style="display: none;"></p>
+        <p id="error-message" class="error"></p>
     </div>
 
     <div id="lobby-screen" style="display: none;">
-        <h2>Кімната: <span id="lobbyGameId"></span></h2>
-        <p>Посилання для запрошення:</p>
-        <div class="invite-link-wrapper">
-            <input type="text" id="lobbyInviteLink" readonly>
-            <div id="copyLobbyLinkBtn" class="copy-icon-btn" title="Копіювати посилання">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
-            </div>
-        </div>
+        <h2><span data-i18n="lobby_title">Кімната:</span> <span id="lobbyGameId"></span></h2>
+        <p data-i18n="lobby_invite_link">Посилання для запрошення:</p>
+        <div class="invite-link-wrapper"><input type="text" id="lobbyInviteLink" readonly><div id="copyLobbyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></div></div>
         <hr>
-        <h3>Гравці в кімнаті:</h3>
+        <h3 data-i18n="lobby_players_title">Гравці в кімнаті:</h3>
         <ul id="player-list"></ul>
-        <p id="lobby-status">Очікуємо на інших гравців...</p>
-        <div id="host-controls" style="display: none;">
-            <button id="startGameBtn" disabled>Почати гру</button>
-        </div>
+        <p id="lobby-status"></p>
+        <div id="host-controls" style="display: none;"><button id="startGameBtn" disabled></button></div>
     </div>
 
     <div id="game-screen" style="display: none;">
-        <div class="game-header">
-            <div class="invite-link-wrapper">
-                <input type="text" id="inviteLink" readonly>
-                <div id="copyLinkBtn" class="copy-icon-btn" title="Копіювати посилання">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg>
-                </div>
-            </div>
-        </div>
+        <button id="leaveGameBtn" class="leave-btn">🚪 <span data-i18n="leave_game_button">Вийти</span></button>
+        <div class="game-header"><div class="invite-link-wrapper"><input type="text" id="inviteLink" readonly><div id="copyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></div></div></div>
         <div id="opponents-container"></div>
-        <div id="game-log-container">
-            <div class="log-header">
-                <h4>Журнал / Чат</h4>
-                <span id="close-log-btn" class="close-log-btn">×</span>
-            </div>
-            <ul id="game-log-list"></ul>
-            <form id="chat-form">
-                <input type="text" id="chat-input" placeholder="Написати в чат..." autocomplete="off">
-                <button type="submit">➤</button>
-            </form>
-        </div>
+        <div id="game-log-container"><div class="log-header"><h4 data-i18n="log_title">Журнал / Чат</h4><span id="close-log-btn" class="close-log-btn">×</span></div><ul id="game-log-list"></ul><form id="chat-form"><input type="text" id="chat-input" placeholder="Написати в чат..." autocomplete="off"><button type="submit">➤</button></form></div>
         <button id="show-log-btn-mobile" class="floating-btn">📜</button>
-        <div id="deck-area">
-            <div id="deck-pile-visual">
-                <div class="card card-back"></div> 
-                <span id="deck-count-display">?</span>
-            </div>
-        </div>
-        <div id="table-area">
-            <div id="game-info-bar"><span id="trump-card-display">Козир: ?</span></div>
-            <p id="turn-status" class="turn-status"></p>
-            <div id="game-table" class="card-hand"></div>
-            <div id="action-buttons"></div>
-        </div>
-        <div id="player-area" class="player-area">
-            <h3>Ви: <span id="playerName"></span></h3>
-            <div id="player-cards" class="card-hand"></div>
-        </div>
+        <div id="deck-area"><div id="deck-pile-visual"><div class="card card-back"></div><span id="deck-count-display">?</span></div></div>
+        <div id="table-area"><div id="game-info-bar"><span id="trump-card-display">Козир: ?</span></div><p id="turn-status" class="turn-status"></p><div id="game-table" class="card-hand"></div><div id="action-buttons"></div></div>
+        <div id="player-area" class="player-area"><h3><span data-i18n="you_are_player">Ви:</span> <span id="playerName"></span></h3><div id="player-cards" class="card-hand"></div></div>
     </div>
 
     <div id="winner-screen" style="display: none;">
         <h2 id="winner-message"></h2>
-        <button id="rematchBtn">Реванш</button>
+        <button id="rematchBtn" data-i18n="rematch_button">Реванш</button>
         <p id="rematch-status"></p>
-        <a href="/"><button class="secondary-btn">Вийти в головне меню</button></a>
+        <a href="/"><button class="secondary-btn" data-i18n="exit_to_menu_button">Вийти в головне меню</button></a>
     </div>
 
     <div id="center-animation-container"></div>
@@ -139,22 +87,17 @@
     <div id="auth-modal" class="modal-overlay" style="display: none;">
         <div class="modal-content">
             <span class="close-modal-btn">×</span>
-            <h2 id="modal-title">Вхід</h2>
+            <h2 id="modal-title"></h2>
             <form id="auth-form">
-                <div class="form-group">
-                    <label for="authUsername">Ім'я користувача:</label>
-                    <input type="text" id="authUsername" required>
-                </div>
-                <div class="form-group">
-                    <label for="authPassword">Пароль:</label>
-                    <input type="password" id="authPassword" required>
-                </div>
+                <div class="form-group"><label for="authUsername" data-i18n="username_label">Ім'я користувача:</label><input type="text" id="authUsername" required></div>
+                <div class="form-group"><label for="authPassword" data-i18n="password_label">Пароль:</label><input type="password" id="authPassword" required></div>
                 <p id="auth-error" class="error"></p>
-                <button type="submit" id="authSubmitBtn">Увійти</button>
+                <button type="submit" id="authSubmitBtn"></button>
             </form>
         </div>
     </div>
 
+    <script src="js/i18n.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/client.js"></script>
 </body>
