feat(chat): add toggle button for chat log and improve i18n support
- Add collapsible chat log functionality with toggle button
- Enhance i18n support for game messages and chat
- Improve leave game confirmation flow with localized messages
- Update UI layout for better mobile responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,17 @@
         <button id="leaveGameBtn" class="leave-btn">🚪 <span data-i18n="leave_game_button">Вийти</span></button>
         <div class="game-header"><div class="invite-link-wrapper"><input type="text" id="inviteLink" readonly><div id="copyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></div></div></div>
         <div id="opponents-container"></div>
-        <div id="game-log-container"><div class="log-header"><h4 data-i18n="log_title">Журнал / Чат</h4><span id="close-log-btn" class="close-log-btn">×</span></div><ul id="game-log-list"></ul><form id="chat-form"><input type="text" id="chat-input" placeholder="Написати в чат..." autocomplete="off"><button type="submit">➤</button></form></div>
+        <div id="game-log-container">
+             <!-- FIX: Header now contains the toggle button -->
+            <div class="log-header">
+                <h4 data-i18n="log_title">Журнал / Чат</h4>
+                <button id="toggle-chat-btn" class="toggle-chat-btn" title="Згорнути/розгорнути">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+                </button>
+                <span id="close-log-btn" class="close-log-btn">×</span>
+            </div>
+            <ul id="game-log-list"></ul>
+            <form id="chat-form"><input type="text" id="chat-input" data-i18n-placeholder="chat_placeholder" autocomplete="off"><button type="submit">➤</button></form>        </div>
         <button id="show-log-btn-mobile" class="floating-btn">📜</button>
         <div id="deck-area"><div id="deck-pile-visual"><div class="card card-back"></div><span id="deck-count-display">?</span></div></div>
         <div id="table-area"><div id="game-info-bar"><span id="trump-card-display">Козир: ?</span></div><p id="turn-status" class="turn-status"></p><div id="game-table" class="card-hand"></div><div id="action-buttons"></div></div>
