--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <title data-i18n="document_title">Гра Дурень Онлайн</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="css/style.css">
-    <!-- Скрипти для перекладу -->
     <script src="https://unpkg.com/i18next/i18next.js"></script>
     <script src="https://unpkg.com/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.js"></script>
 </head>
@@ -24,6 +23,7 @@
                 <span><span data-i18n="profile_wins">🏆 Перемог:</span> <b id="profile-wins">0</b></span>
                 <span><span data-i18n="profile_losses">💔 Поразок:</span> <b id="profile-losses">0</b></span>
             </div>
+            <button id="achievementsBtn" class="secondary-btn" data-i18n="achievements_button">🏆 Досягнення</button>
             <a href="/settings"><button class="secondary-btn" data-i18n="settings_button">Налаштування</button></a>
             <button id="logoutBtn" class="secondary-btn" data-i18n="logout_button">Вийти</button>
         </div>
@@ -68,7 +68,6 @@
         <div class="game-header"><div class="invite-link-wrapper"><input type="text" id="inviteLink" readonly><div id="copyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></div></div></div>
         <div id="opponents-container"></div>
         <div id="game-log-container">
-             <!-- FIX: Header now contains the toggle button -->
             <div class="log-header">
                 <h4 data-i18n="log_title">Журнал / Чат</h4>
                 <button id="toggle-chat-btn" class="toggle-chat-btn" title="Згорнути/розгорнути">
@@ -91,8 +90,18 @@
         <a href="/"><button class="secondary-btn" data-i18n="exit_to_menu_button">Вийти в головне меню</button></a>
     </div>
 
+    <div id="achievements-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content large">
+            <span id="close-achievements-modal-btn" class="close-modal-btn">×</span>
+            <h2 data-i18n="achievements_modal_title">Досягнення</h2>
+            <div id="achievements-list" class="achievements-grid">
+            </div>
+        </div>
+    </div>
+
     <div id="center-animation-container"></div>
     <div id="error-toast"></div>
+    <div id="achievement-toast-container"></div>
 
     <div id="auth-modal" class="modal-overlay" style="display: none;">
         <div class="modal-content">
@@ -106,6 +115,7 @@
             </form>
         </div>
     </div>
+
 
     <script src="js/i18n.js"></script>
     <script src="/socket.io/socket.io.js"></script>
