feat(admin): add game spectating and termination for admins
- Add spectate button and styling for admin game observation
- Implement admin endpoints to list active games and terminate them
- Add spectator mode with separate game state updates
- Include i18n translations for new admin game management features

--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,7 @@
 
     <div id="game-screen" style="display: none;">
         <button id="leaveGameBtn" class="leave-btn">🚪 <span data-i18n="leave_game_button">Вийти</span></button>
+        <button id="spectateGameBtn" class="spectate-btn" style="display: none;">👁️ <span data-i18n="spectate_game_button">Спостерігати</span></button>
         <div class="game-header"><div class="invite-link-wrapper"><input type="text" id="inviteLink" readonly><div id="copyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></div></div></div>
         <div id="opponents-container"></div>
         <div id="game-log-container">
