--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <script src="https://unpkg.com/i18next/i18next.js"></script>
     <script src="https://unpkg.com/i18next-browser-languagedetector/i18nextBrowserLanguageDetector.js"></script>
 </head>
+
 <body>
     <div class="lang-switcher">
         <button class="lang-btn" data-lang="uk">🇺🇦</button>
@@ -23,9 +25,12 @@
                 <span><span data-i18n="profile_wins">🏆 Перемог:</span> <b id="profile-wins">0</b></span>
                 <span><span data-i18n="profile_losses">💔 Поразок:</span> <b id="profile-losses">0</b></span>
             </div>
-            <button id="leaderboardBtn" class="secondary-btn" data-i18n="leaderboard_button">🏆 Лідерборди</button>
-            <button id="achievementsBtn" class="secondary-btn" data-i18n="achievements_button">🏆 Досягнення</button>
-            <a href="/settings"><button class="secondary-btn" data-i18n="settings_button">Налаштування</button></a>
+            <div class="profile-actions">
+                <button id="leaderboardBtnUser" class="secondary-btn" data-i18n="leaderboard_button">🏆 Лідерборди</button> 
+                <button id="achievementsBtn" class="secondary-btn" data-i18n="achievements_button">🏆
+                    Досягнення</button>
+                <a href="/settings"><button class="secondary-btn" data-i18n="settings_button">Налаштування</button></a>
+            </div>
             <button id="logoutBtn" class="secondary-btn" data-i18n="logout_button">Вийти</button>
         </div>
         <div id="guest-login">
@@ -33,6 +38,9 @@
                 <button id="showLoginBtn" class="secondary-btn" data-i18n="login_button">Вхід</button>
                 <button id="showRegisterBtn" class="secondary-btn" data-i18n="register_button">Реєстрація</button>
             </div>
+            <div class="guest-actions">
+                <button id="leaderboardBtnGuest" class="secondary-btn" data-i18n="leaderboard_button">🏆 Лідерборди</button>
+           </div>
             <p class="separator"><span data-i18n="or_separator">АБО</span></p>
             <div class="settings-form">
                 <div class="form-group">
@@ -43,12 +51,26 @@
         </div>
         <div id="game-creation-controls">
             <div class="settings-form">
-                <div class="form-group"><label for="deckSize" data-i18n="deck_size_label">Розмір колоди:</label><select id="deckSize"><option value="36" data-i18n="deck_36">36 карт</option><option value="52" data-i18n="deck_52">52 карти</option><option value="24" data-i18n="deck_24">24 карти</option></select></div>
-                <div class="form-group"><label for="maxPlayers" data-i18n="players_count_label">Кількість гравців:</label><select id="maxPlayers"><option value="2" data-i18n="players_2">2 гравці</option><option value="3" data-i18n="players_3">3 гравці</option><option value="4" data-i18n="players_4">4 гравці</option></select></div>
-                <div class="form-group"><label for="customGameId" data-i18n="custom_link_label">Своє посилання (необов'язково):</label><input type="text" id="customGameId" placeholder="MY-COOL-GAME"></div>
+                <div class="form-group"><label for="deckSize" data-i18n="deck_size_label">Розмір колоди:</label><select
+                        id="deckSize">
+                        <option value="36" data-i18n="deck_36">36 карт</option>
+                        <option value="52" data-i18n="deck_52">52 карти</option>
+                        <option value="24" data-i18n="deck_24">24 карти</option>
+                    </select></div>
+                <div class="form-group"><label for="maxPlayers" data-i18n="players_count_label">Кількість
+                        гравців:</label><select id="maxPlayers">
+                        <option value="2" data-i18n="players_2">2 гравці</option>
+                        <option value="3" data-i18n="players_3">3 гравці</option>
+                        <option value="4" data-i18n="players_4">4 гравці</option>
+                    </select></div>
+                <div class="form-group"><label for="customGameId" data-i18n="custom_link_label">Своє посилання
+                        (необов'язково):</label><input type="text" id="customGameId" placeholder="MY-COOL-GAME"></div>
                 <button id="createGameBtn" data-i18n="create_game_button">Створити гру</button>
             </div>
-            <div id="join-game-section" style="display: none;"><p data-i18n="join_game_prompt">Приєднайтесь до гри друга:</p><button id="joinGameBtn" data-i18n="join_button">Приєднатись</button></div>
+            <div id="join-game-section" style="display: none;">
+                <p data-i18n="join_game_prompt">Приєднайтесь до гри друга:</p><button id="joinGameBtn"
+                    data-i18n="join_button">Приєднатись</button>
+            </div>
         </div>
         <p id="error-message" class="error"></p>
     </div>
@@ -56,7 +78,14 @@
     <div id="lobby-screen" style="display: none;">
         <h2><span data-i18n="lobby_title">Кімната:</span> <span id="lobbyGameId"></span></h2>
         <p data-i18n="lobby_invite_link">Посилання для запрошення:</p>
-        <div class="invite-link-wrapper"><input type="text" id="lobbyInviteLink" readonly><div id="copyLobbyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></div></div>
+        <div class="invite-link-wrapper"><input type="text" id="lobbyInviteLink" readonly>
+            <div id="copyLobbyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                    <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                </svg></div>
+        </div>
         <hr>
         <h3 data-i18n="lobby_players_title">Гравці в кімнаті:</h3>
         <ul id="player-list"></ul>
@@ -66,23 +95,101 @@
 
     <div id="game-screen" style="display: none;">
         <button id="leaveGameBtn" class="leave-btn">🚪 <span data-i18n="leave_game_button">Вийти</span></button>
-        <button id="spectateGameBtn" class="spectate-btn" style="display: none;">👁️ <span data-i18n="spectate_game_button">Спостерігати</span></button>
-        <div class="game-header"><div class="invite-link-wrapper"><input type="text" id="inviteLink" readonly><div id="copyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path></svg></div></div></div>
+        <button id="music-panel-toggle-btn" class="floating-btn music-btn" title="Музика">🎵</button>
+
+        <div class="game-header">
+            <div class="invite-link-wrapper"><input type="text" id="inviteLink" readonly>
+                <div id="copyLinkBtn" class="copy-icon-btn" title="Копіювати посилання"><svg
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                        <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                    </svg></div>
+            </div>
+        </div>
         <div id="opponents-container"></div>
         <div id="game-log-container">
             <div class="log-header">
                 <h4 data-i18n="log_title">Журнал / Чат</h4>
                 <button id="toggle-chat-btn" class="toggle-chat-btn" title="Згорнути/розгорнути">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
                 </button>
                 <span id="close-log-btn" class="close-log-btn">×</span>
             </div>
             <ul id="game-log-list"></ul>
-            <form id="chat-form"><input type="text" id="chat-input" data-i18n-placeholder="chat_placeholder" autocomplete="off"><button type="submit">➤</button></form>        </div>
+            <form id="chat-form"><input type="text" id="chat-input" data-i18n-placeholder="chat_placeholder"
+                    autocomplete="off"><button type="submit">➤</button></form>
+        </div>
         <button id="show-log-btn-mobile" class="floating-btn">📜</button>
-        <div id="deck-area"><div id="deck-pile-visual"><div class="card card-back"></div><span id="deck-count-display">?</span></div></div>
-        <div id="table-area"><div id="game-info-bar"><span id="trump-card-display">Козир: ?</span></div><p id="turn-status" class="turn-status"></p><div id="game-table" class="card-hand"></div><div id="action-buttons"></div></div>
-        <div id="player-area" class="player-area"><h3><span data-i18n="you_are_player">Ви:</span> <span id="playerName"></span></h3><div id="player-cards" class="card-hand"></div></div>
+        <div id="deck-area">
+            <div id="deck-pile-visual">
+                <div class="card card-back"></div><span id="deck-count-display">?</span>
+            </div>
+        </div>
+        <div id="table-area">
+            <div id="game-info-bar"><span id="trump-card-display">Козир: ?</span></div>
+            <p id="turn-status" class="turn-status"></p>
+            <div id="game-table" class="card-hand"></div>
+            <div id="action-buttons"></div>
+        </div>
+        <div id="player-area" class="player-area">
+            <h3><span data-i18n="you_are_player">Ви:</span> <span id="playerName"></span></h3>
+            <div id="player-cards" class="card-hand"></div>
+        </div>
+
+        <div id="music-panel" class="music-panel" style="display: none;">
+            <div class="music-panel-header">
+                <h4>Музика в кімнаті</h4>
+                <span id="close-music-panel-btn" class="close-panel-btn">×</span>
+            </div>
+            <div class="music-panel-body">
+                <div id="current-track-info">
+                    <strong>Зараз грає:</strong> <span id="track-title-display">Тиша...</span><br>
+                    <small>Запропонував: <span id="suggester-display">ніхто</span></small>
+                </div>
+                <hr>
+                <div id="host-music-controls" style="display: none;">
+                    <label for="youtube-url-input">Вставте посилання на YouTube:</label>
+                    <input type="text" id="youtube-url-input" placeholder="https://www.youtube.com/watch?v=...">
+                    <button id="change-track-btn">Встановити трек</button>
+                    <div class="playback-controls">
+                        <button id="toggle-playback-btn">▶️</button>
+                        <input type="range" id="volume-slider" min="0" max="100" value="50">
+                    </div>
+                    <hr>
+                    <div class="track-progress">
+                        <div class="time-display" id="current-time-display">
+                            <span class="minutes">0</span>
+                            <span>:</span>
+                            <div class="digit-container">
+                                <span class="digit-reel" id="secs-tens"></span>
+                            </div>
+                            <div class="digit-container">
+                                <span class="digit-reel" id="secs-ones"></span>
+                            </div>
+                        </div>
+                        <span class="time-separator">/</span>
+                        <span class="time-display" id="duration-display">0:00</span>
+                    </div>
+                    <div id="suggestions-list-container">
+                        <h5>Пропозиції від гравців:</h5>
+                        <ul id="suggestions-list"></ul>
+                    </div>
+                </div>
+
+                <div id="guest-music-controls" style="display: none;">
+                    <label for="suggest-url-input">Запропонувати трек (YouTube):</label>
+                    <input type="text" id="suggest-url-input" placeholder="https://www.youtube.com/watch?v=...">
+                    <button id="suggest-track-btn">Запропонувати</button>
+                </div>
+            </div>
+            <div id="guest-music-controls">
+            </div>
+        </div>
+    </div>
     </div>
 
     <div id="winner-screen" style="display: none;">
@@ -92,12 +199,29 @@
         <a href="/"><button class="secondary-btn" data-i18n="exit_to_menu_button">Вийти в головне меню</button></a>
     </div>
 
+    <div id="center-animation-container"></div>
+    <div id="error-toast"></div>
+
+    <div id="auth-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <span class="close-modal-btn">×</span>
+            <h2 id="modal-title"></h2>
+            <form id="auth-form">
+                <div class="form-group"><label for="authUsername" data-i18n="username_label">Ім'я
+                        користувача:</label><input type="text" id="authUsername" required></div>
+                <div class="form-group"><label for="authPassword" data-i18n="password_label">Пароль:</label><input
+                        type="password" id="authPassword" required></div>
+                <p id="auth-error" class="error"></p>
+                <button type="submit" id="authSubmitBtn"></button>
+            </form>
+        </div>
+    </div>
+
     <div id="achievements-modal" class="modal-overlay" style="display: none;">
         <div class="modal-content large">
             <span id="close-achievements-modal-btn" class="close-modal-btn">×</span>
             <h2 data-i18n="achievements_modal_title">Досягнення</h2>
-            <div id="achievements-list" class="achievements-grid">
-            </div>
+            <div id="achievements-list" class="achievements-grid"></div>
         </div>
     </div>
 
@@ -106,35 +230,23 @@
             <span id="close-leaderboard-modal-btn" class="close-modal-btn">×</span>
             <h2 data-i18n="leaderboard_modal_title">Лідерборди</h2>
             <div class="tabs">
-                <button class="tab-link active" data-type="rating" data-i18n="leaderboard_tab_rating">За Рейтингом</button>
+                <button class="tab-link active" data-type="rating" data-i18n="leaderboard_tab_rating">За
+                    Рейтингом</button>
                 <button class="tab-link" data-type="wins" data-i18n="leaderboard_tab_wins">За Перемогами</button>
-                <button class="tab-link" data-type="win_streak" data-i18n="leaderboard_tab_win_streak">За Серією Перемог</button>
+                <button class="tab-link" data-type="win_streak" data-i18n="leaderboard_tab_win_streak">За Серією
+                    Перемог</button>
             </div>
-            <div id="leaderboard-content">
-            </div>
+            <div id="leaderboard-content"></div>
         </div>
     </div>
 
-    <div id="center-animation-container"></div>
-    <div id="error-toast"></div>
     <div id="achievement-toast-container"></div>
-
-    <div id="auth-modal" class="modal-overlay" style="display: none;">
-        <div class="modal-content">
-            <span class="close-modal-btn">×</span>
-            <h2 id="modal-title"></h2>
-            <form id="auth-form">
-                <div class="form-group"><label for="authUsername" data-i18n="username_label">Ім'я користувача:</label><input type="text" id="authUsername" required></div>
-                <div class="form-group"><label for="authPassword" data-i18n="password_label">Пароль:</label><input type="password" id="authPassword" required></div>
-                <p id="auth-error" class="error"></p>
-                <button type="submit" id="authSubmitBtn"></button>
-            </form>
-        </div>
-    </div>
-
+    <div id="youtube-player-container" style="position: absolute; top: -9999px; left: -9999px;"></div>
 
     <script src="js/i18n.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/client.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
 </body>
+
 </html>
