refactor(profile): improve profile actions layout and styling
- Make profile actions wrap on smaller screens
- Move logout button into profile actions container
- Adjust spacing and flex properties for better responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,13 @@
                 <span><span data-i18n="profile_losses">💔 Поразок:</span> <b id="profile-losses">0</b></span>
             </div>
             <div class="profile-actions">
-                <button id="leaderboardBtnUser" class="secondary-btn" data-i18n="leaderboard_button">🏆 Лідерборди</button> 
-                <button id="achievementsBtn" class="secondary-btn" data-i18n="achievements_button">🏆
+                <button id="leaderboardBtnUser" class="secondary-btn icon-btn" data-i18n="leaderboard_button">🏆
+                    Лідерборди</button>
+                <button id="achievementsBtn" class="secondary-btn icon-btn" data-i18n="achievements_button">🏆
                     Досягнення</button>
                 <a href="/settings"><button class="secondary-btn" data-i18n="settings_button">Налаштування</button></a>
+                <button id="logoutBtn" class="secondary-btn" data-i18n="logout_button">Вийти</button>
             </div>
-            <button id="logoutBtn" class="secondary-btn" data-i18n="logout_button">Вийти</button>
         </div>
         <div id="guest-login">
             <div class="auth-buttons">
@@ -39,8 +40,9 @@
                 <button id="showRegisterBtn" class="secondary-btn" data-i18n="register_button">Реєстрація</button>
             </div>
             <div class="guest-actions">
-                <button id="leaderboardBtnGuest" class="secondary-btn" data-i18n="leaderboard_button">🏆 Лідерборди</button>
-           </div>
+                <button id="leaderboardBtnGuest" class="secondary-btn" data-i18n="leaderboard_button">🏆
+                    Лідерборди</button>
+            </div>
             <p class="separator"><span data-i18n="or_separator">АБО</span></p>
             <div class="settings-form">
                 <div class="form-group">
