feat(system): implement maintenance mode and custom error pages - Added API endpoints for administrators (/api/admin/maintenance/...) to enable, disable, and schedule maintenance with custom messages and timers. - Implemented a server-wide middleware to intercept requests and redirect users to a maintenance page when the mode is active. - Integrated Socket.IO events (maintenanceWarning, maintenanceCancelled) to notify online players in real-time with a countdown banner. - Blocked new game creation and joining when maintenance is scheduled. - Created a universal, dynamically populated error.html page with animated backgrounds for handling 404, 500, and other errors. - Implemented server-side handlers in server.js to catch errors and redirect to the custom error page.

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <div id="maintenance-banner" class="maintenance-banner" style="display: none;">
+        <span id="maintenance-banner-message"></span>
+        <span id="maintenance-banner-countdown"></span>
+    </div>
     <div class="lang-switcher">
         <button class="lang-btn" data-lang="uk">🇺🇦</button>
         <button class="lang-btn" data-lang="en">🇬🇧</button>
