--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,12 @@
                     Лідерборди</button>
                 <button id="achievementsBtn" class="secondary-btn icon-btn" data-i18n="achievements_button">🏆
                     Досягнення</button>
+                <button id="friendsBtn" class="secondary-btn icon-btn" data-i18n="friends_button">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="18" height="18" style="vertical-align: middle;">
+                        <path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/>
+                    </svg>
+                    <span data-i18n="friends_button_text">Друзі</span>
+                </button>
                 <a href="/settings"><button class="secondary-btn" data-i18n="settings_button">Налаштування</button></a>
                 <button id="logoutBtn" class="secondary-btn" data-i18n="logout_button">Вийти</button>
             </div>
@@ -246,11 +252,56 @@
         </div>
     </div>
 
+    <div id="friends-modal" class="modal-overlay" style="display: none;">
+        <div class="modal-content large">
+            <span id="close-friends-modal-btn" class="close-modal-btn">×</span>
+            <h2 data-i18n="friends_modal_title">Друзі</h2>
+
+            <div class="tabs">
+                <button class="tab-link active" data-tab="friends-list-tab" data-i18n="friends_tab_friends">Мої друзі</button>
+                <button class="tab-link" data-tab="incoming-requests-tab" data-i18n="friends_tab_incoming">Вхідні запити <span id="incoming-requests-count" class="notification-badge" style="display: none;"></span></button>
+                <button class="tab-link" data-tab="outgoing-requests-tab" data-i18n="friends_tab_outgoing">Вихідні запити</button>
+                <button class="tab-link" data-tab="add-friend-tab" data-i18n="friends_tab_add">Знайти друзів</button>
+            </div>
+
+            <div id="friends-list-tab" class="tab-content active">
+                <ul id="friends-list" class="user-list">
+                    <p class="empty-list-placeholder" data-i18n="friends_list_empty">У вас поки немає друзів.</p>
+                </ul>
+            </div>
+
+            <div id="incoming-requests-tab" class="tab-content">
+                <ul id="incoming-requests-list" class="user-list">
+                    <p class="empty-list-placeholder" data-i18n="friends_incoming_empty">Немає вхідних запитів.</p>
+                </ul>
+            </div>
+
+            <div id="outgoing-requests-tab" class="tab-content">
+                <ul id="outgoing-requests-list" class="user-list">
+                    <p class="empty-list-placeholder" data-i18n="friends_outgoing_empty">Немає вихідних запитів.</p>
+                </ul>
+            </div>
+
+            <div id="add-friend-tab" class="tab-content">
+                <div class="search-form">
+                    <input type="text" id="find-friend-input" data-i18n-placeholder="friends_search_placeholder">
+                    <button id="find-friend-btn" data-i18n="friends_search_button">Пошук</button>
+                </div>
+                <div id="search-results-container">
+                    <ul id="search-results-list" class="user-list"></ul>
+                    <p id="search-message" class="info-message"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div id="achievement-toast-container"></div>
     <div id="youtube-player-container" style="position: absolute; top: -9999px; left: -9999px;"></div>
 
     <script src="js/i18n.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="js/friends.js"></script>
     <script src="js/client.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
 </body>
