feat(economy): implement in-game currency and betting system - Added `coins` and `last_daily_bonus_claim` columns to the `users` table, ensuring robust schema updates for both SQLite and PostgreSQL. - Implemented a daily bonus system to reward active players. - Users now have a coin balance displayed in their profile, which is updated in real-time. - Added UI on the main screen to create games with custom bets (using an input field instead of a fixed list). - The server validates if players have enough coins to create or join a betting game. - Refactored the post-game stats update logic to be database-agnostic (`async/await` with transactions), fixing a critical bug on PostgreSQL. - Prevented users from joining a game they are already in.

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
             <p><span data-i18n="profile_greeting">Ви увійшли як</span> <strong id="profile-username"></strong></p>
             <div class="stats">
                 <span><span data-i18n="profile_wins">🏆 Перемог:</span> <b id="profile-wins">0</b></span>
+                <span><span data-i18n="profile_coins">💰 Монет:</span> <b id="profile-coins">0</b></span>
                 <span><span data-i18n="profile_losses">💔 Поразок:</span> <b id="profile-losses">0</b></span>
             </div>
             <div class="profile-actions">
@@ -75,6 +76,18 @@
                         <option value="3" data-i18n="players_3">3 гравці</option>
                         <option value="4" data-i18n="players_4">4 гравці</option>
                     </select></div>
+                <div class="form-group bet-toggle-group">
+                    <label for="betToggle" data-i18n="bet_toggle_label">Гра на ставки</label>
+                    <label class="switch">
+                        <input type="checkbox" id="betToggle">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+
+                <div class="form-group" id="bet-amount-group" style="display: none;">
+                    <label for="betAmount" data-i18n="bet_amount_label">Розмір ставки (монет):</label>
+                    <input type="number" id="betAmount" value="10" min="10" max="10000" step="5" placeholder="10">
+                </div>
                 <div class="form-group"><label for="customGameId" data-i18n="custom_link_label">Своє посилання
                         (необов'язково):</label><input type="text" id="customGameId" placeholder="MY-COOL-GAME"></div>
                 <button id="createGameBtn" data-i18n="create_game_button">Створити гру</button>
