feat(roulette): implement full MVP of roulette minigame - Adds a complete, playable European roulette minigame to the hub. - Created a real-time game loop on the server using Socket.IO to manage game phases (betting, spinning, results). - Implemented logic for placing bets, deducting coins from user balances, and calculating/awarding payouts. - Added support for simple bets (color, even/odd) and bets on individual numbers (0-36) with a 36x payout - Created a new `/roulette` page with a dedicated UI. - Developed a fully responsive and adaptive betting table that works on both desktop and mobile devices. - The UI displays the game timer, winning number history, and user's current bets. - Implemented real-time feedback for players, including win/loss notifications and balance updates.

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
                     <span data-i18n="friends_button_text">Друзі</span>
                 </button>
                 <a href="/settings"><button class="secondary-btn" data-i18n="settings_button">Налаштування</button></a>
+                <a href="/roulette"><button class="secondary-btn">🎰 Рулетка</button></a>
                 <button id="logoutBtn" class="secondary-btn" data-i18n="logout_button">Вийти</button>
             </div>
         </div>
